# gcp-monitoring

./: .gitignore  app.py  instance.py  main.py  metrics copy.py  metrics-copy.py  metrics.py  pyproject.toml  requirements.txt  test.py
templates/: index.html  login.html
